<resources>
    <string name="app_name">Auto Hub</string>
    <string name="welcome_to_autohub_github_client_to_manage_show_github_account_info_with_without_internet_click_continue_to_login_into_your_account">Welcome To Autohub (Github Client) To Manage, Show Github Account Info With / Without Internet Click Continue To Login into Your Account</string>
    <string name="continue_button">Continue</string>
    <string name="home">Home</string>
    <string name="notifi">Notification</string>
    <string name="search">Search</string>
    <string name="view_repo">View Notification Info</string>
    <string name="profile">Profile</string>
    <string name="repositories">Repositories</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="login">Login</string>
    <string name="welcome_login">Welcome To Autohub Client Login With Your Username and Password From Github To Get Your Account Information</string>
    <string name="username_hint">Username</string>
    <string name="pass_hint">Password</string>
    <string name="username_required">Username Required</string>
    <string name="pass_required">Password Required</string>
    <string name="enter_app">Continue</string>
    <string name="welcome_to_autohub_github_client_if_everything_right_click_continue_to_start_using_the_application_features">Welcome To Autohub (Github Client) if Everything Right Click Continue To Start using The Application Features</string>
    <string name="stars">Stars</string>
    <string name="forks">Forks</string>
    <string name="action">"Action : "</string>
    <string name="type">Type</string>
    <string name="repo_name">"Repository : "</string>
    <string name="pick_method">Pick Method</string>
    <string name="orgs">Organizations</string>
    <string name="trending">Trending Repositories</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="language_name">Language Name</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="starred_repos">Starred Repositories</string>
    <string name="info">Info</string>
    <string name="branches">Commits</string>
    <string name="commits">Contribution</string>
    <string name="repository_details">Repository Details</string>
    <string name="contributions">Contributions</string>
</resources>